force-app/main/default/objects/NCR__c/NCR__c.object-meta.xml
<CustomObject>
    <description>Non-Conformance Report â€” tracks quality/construction deviations. Owned by WP4; reused by WP5.</description>
    <label>NCR</label>
    <nameField>
        <displayFormat>NCR-{00000}</displayFormat>
        <label>NCR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>