force-app/main/default/objects/NCR__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>