force-app/main/default/objects/NCR__c/fields/Identified_Date__c.field-meta.xml
<CustomField>
    <fullName>Identified_Date__c</fullName>
    <label>Identified Date</label>
    <type>Date</type>
</CustomField>