force-app/main/default/objects/NCR__c/fields/Opened_By__c.field-meta.xml
<CustomField>
    <fullName>Opened_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opened By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opened NCRs</relationshipLabel>
    <relationshipName>Opened_NCRs</relationshipName>
    <type>Lookup</type>
</CustomField>