force-app/main/default/objects/NCR__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>NCRs</relationshipLabel>
    <relationshipName>NCRs</relationshipName>
    <type>Lookup</type>
</CustomField>