force-app/main/default/objects/NCR__c/fields/RCA_Method__c.field-meta.xml
<CustomField>
    <fullName>RCA_Method__c</fullName>
    <label>RCA Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5-Why</fullName>
            </value>
            <value>
                <fullName>Fishbone</fullName>
            </value>
            <value>
                <fullName>FMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>