force-app/main/default/objects/NCR__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Party</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned NCRs</relationshipLabel>
    <relationshipName>Assigned_NCRs</relationshipName>
    <type>Lookup</type>
</CustomField>