force-app/main/default/objects/NCR__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>NCRs</relationshipLabel>
    <relationshipName>NCRs</relationshipName>
    <type>Lookup</type>
</CustomField>